// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls [select [[]]] =Select([[]], Set(#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar, Input.selected)) 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "Select",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LBracket",
    "display": "[",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LBracket",
    "display": "[",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "RBracket",
    "display": "]",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "RBracket",
    "display": "]",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "Set",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": Object {
      "findKey": Object {
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        "type": "id",
        "value": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
      },
      "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
      "kind": "Variable",
      "name": "varvarabcvar",
      "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
    },
    "code": "Variable",
    "display": "varvarabcvar",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Input",
    "display": "Input",
    "errors": Array [],
    "hide": false,
    "type": "Record",
  },
  Object {
    "attrs": undefined,
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "FunctionName",
    "display": "selected",
    "errors": Array [],
    "hide": false,
    "type": "string",
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "Function",
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "Select",
  },
]
`;

exports[`Controls [select []] =Select([], Set(#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar, Input.selected)) 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "Select",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LBracket",
    "display": "[",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "RBracket",
    "display": "]",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "Set",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": Object {
      "findKey": Object {
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        "type": "id",
        "value": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
      },
      "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
      "kind": "Variable",
      "name": "varvarabcvar",
      "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
    },
    "code": "Variable",
    "display": "varvarabcvar",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Input",
    "display": "Input",
    "errors": Array [],
    "hide": false,
    "type": "Record",
  },
  Object {
    "attrs": undefined,
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "FunctionName",
    "display": "selected",
    "errors": Array [],
    "hide": false,
    "type": "string",
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "Function",
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "Select",
  },
]
`;

exports[`Controls [set error] = Set(a, 1) 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "Set",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "a",
    "errors": Array [
      Object {
        "message": "Unknown function a",
        "type": "syntax",
      },
      Object {
        "message": "TODO mismatch token FunctionCall",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "Function",
  },
]
`;

exports[`Controls [set unknown] =Set(#57622108-1337-4edd-833a-2557835bcfe0.baz, 1) 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "Set",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": Object {
      "findKey": Object {
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        "type": "id",
        "value": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "id": "57622108-1337-4edd-833a-2557835bcfe0",
      "kind": "Block",
      "name": "Untitled",
      "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
    },
    "code": "Block",
    "display": "Untitled",
    "errors": Array [],
    "hide": true,
    "type": "Block",
  },
  Object {
    "attrs": undefined,
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "FunctionName",
    "display": "baz",
    "errors": Array [
      Object {
        "message": "\\"baz\\" not found",
        "type": "deps",
      },
    ],
    "hide": false,
    "type": "string",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "Function",
  },
]
`;
